tests/scripts/errors/parse/missing_semicolon.cdo
VAR x = 1
VAR y = 2;
print(x + y);
